# vllm-flashinfer-sm120-patch

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
src/vllm_flashinfer_sm120/: cli.py  patch_manifest.json
src/vllm_flashinfer_sm120/patches/flashinfer/data/csrc/nv_internal/tensorrt_llm/kernels/cutlass_kernels/moe_gemm/: moe_gemm_template_dispatch_tma_ws.h
src/vllm_flashinfer_sm120/patches/flashinfer/data/cutlass/include/cute/atom/: copy_traits_sm90_tma.hpp
src/vllm_flashinfer_sm120/patches/flashinfer/data/cutlass/include/cutlass/gemm/collective/builders/: sm120_blockscaled_mma_builder.inl
